// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilesListing> no files 1`] = `
<div>
  No files for you
</div>
`;

exports[`<FilesListing> with files custom header 1`] = `
<div>
  <div
    className="file-listing--header bottom-spacing"
  >
    Custom header
  </div>
  <div
    className="component file-listing-row--container"
    key="0"
  >
    <div
      className="detail-component"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-4 file-listing-icon--container"
        >
          <input
            checked={false}
            name="exam.xlsx"
            onClick={[MockFunction]}
            type="checkbox"
          />
          <i
            className="fa fa-file-excel-o file-listing-icon"
          />
        </div>
        <div
          className="col-xs-3 file-listing-info"
        >
          <strong>
            <a
              href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
              title="exam.xlsx"
            >
              <div
                className="file-listing-filename"
              >
                exam.xlsx
              </div>
            </a>
          </strong>
          <br />
          <span
            className="file-listing-info-light"
          >
            <span
              className="test-loc-file-created-by"
            >
              Vader
            </span>
            <span
              className="test-loc-file-created"
            >
              2019-11-08 12:26:30.064
            </span>
          </span>
        </div>
        <div
          className="col-xs-5"
        >
          i'm an excel file
        </div>
        <span
          className="pull-right"
        />
      </div>
    </div>
  </div>
  <div
    className="component file-listing-row--container"
    key="1"
  >
    <div
      className="detail-component"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-4 file-listing-icon--container"
        >
          <input
            checked={false}
            name="xray.gif"
            onClick={[MockFunction]}
            type="checkbox"
          />
          <i
            className="fa fa-file-image-o file-listing-icon"
          />
        </div>
        <div
          className="col-xs-3 file-listing-info"
        >
          <strong>
            <a
              href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
              title="xray.gif"
            >
              <div
                className="file-listing-filename"
              >
                xray.gif
              </div>
            </a>
          </strong>
          <br />
          <span
            className="file-listing-info-light"
          >
            <span
              className="test-loc-file-created-by"
            >
              Skywalker
            </span>
            <span
              className="test-loc-file-created"
            >
              2019-11-14 15:47:51.931
            </span>
          </span>
        </div>
        <div
          className="col-xs-5"
        >
          i'm gif
        </div>
        <span
          className="pull-right"
        />
      </div>
    </div>
  </div>
  <div
    className="component file-listing-row--container"
    key="2"
  >
    <div
      className="detail-component"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-4 file-listing-icon--container"
        >
          <input
            checked={false}
            name="report.json"
            onClick={[MockFunction]}
            type="checkbox"
          />
          <i
            className="fa fa-file-o file-listing-icon"
          />
        </div>
        <div
          className="col-xs-3 file-listing-info"
        >
          <strong>
            <a
              href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
              title="report.json"
            >
              <div
                className="file-listing-filename"
              >
                report.json
              </div>
            </a>
          </strong>
          <br />
          <span
            className="file-listing-info-light"
          >
            <span
              className="test-loc-file-created-by"
            >
              Vader
            </span>
            <span
              className="test-loc-file-created"
            >
              2019-11-14 15:48:11.472
            </span>
          </span>
        </div>
        <div
          className="col-xs-5"
        >
          i'm a json file
        </div>
        <span
          className="pull-right"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilesListing> with files deletable 1`] = `
<div>
  <div
    className="component file-listing-row--container"
    key="0"
  >
    <div
      className="detail-component"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-4 file-listing-icon--container"
        >
          <input
            checked={false}
            name="exam.xlsx"
            onClick={[MockFunction]}
            type="checkbox"
          />
          <i
            className="fa fa-file-excel-o file-listing-icon"
          />
        </div>
        <div
          className="col-xs-3 file-listing-info"
        >
          <strong>
            <a
              href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
              title="exam.xlsx"
            >
              <div
                className="file-listing-filename"
              >
                exam.xlsx
              </div>
            </a>
          </strong>
          <br />
          <span
            className="file-listing-info-light"
          >
            <span
              className="test-loc-file-created-by"
            >
              Vader
            </span>
            <span
              className="test-loc-file-created"
            >
              2019-11-08 12:26:30.064
            </span>
          </span>
        </div>
        <div
          className="col-xs-5"
        >
          i'm an excel file
        </div>
        <span
          className="pull-right"
        >
          <span
            className="pull-right file-listing-delete"
            onClick={[Function]}
          >
            <i
              className="fa fa-times-circle file-listing-delete-icon"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="component file-listing-row--container"
    key="1"
  >
    <div
      className="detail-component"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-4 file-listing-icon--container"
        >
          <input
            checked={false}
            name="xray.gif"
            onClick={[MockFunction]}
            type="checkbox"
          />
          <i
            className="fa fa-file-image-o file-listing-icon"
          />
        </div>
        <div
          className="col-xs-3 file-listing-info"
        >
          <strong>
            <a
              href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
              title="xray.gif"
            >
              <div
                className="file-listing-filename"
              >
                xray.gif
              </div>
            </a>
          </strong>
          <br />
          <span
            className="file-listing-info-light"
          >
            <span
              className="test-loc-file-created-by"
            >
              Skywalker
            </span>
            <span
              className="test-loc-file-created"
            >
              2019-11-14 15:47:51.931
            </span>
          </span>
        </div>
        <div
          className="col-xs-5"
        >
          i'm gif
        </div>
        <span
          className="pull-right"
        >
          <span
            className="pull-right file-listing-delete"
            onClick={[Function]}
          >
            <i
              className="fa fa-times-circle file-listing-delete-icon"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="component file-listing-row--container"
    key="2"
  >
    <div
      className="detail-component"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-4 file-listing-icon--container"
        >
          <input
            checked={false}
            name="report.json"
            onClick={[MockFunction]}
            type="checkbox"
          />
          <i
            className="fa fa-file-o file-listing-icon"
          />
        </div>
        <div
          className="col-xs-3 file-listing-info"
        >
          <strong>
            <a
              href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
              title="report.json"
            >
              <div
                className="file-listing-filename"
              >
                report.json
              </div>
            </a>
          </strong>
          <br />
          <span
            className="file-listing-info-light"
          >
            <span
              className="test-loc-file-created-by"
            >
              Vader
            </span>
            <span
              className="test-loc-file-created"
            >
              2019-11-14 15:48:11.472
            </span>
          </span>
        </div>
        <div
          className="col-xs-5"
        >
          i'm a json file
        </div>
        <span
          className="pull-right"
        >
          <span
            className="pull-right file-listing-delete"
            onClick={[Function]}
          >
            <i
              className="fa fa-times-circle file-listing-delete-icon"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilesListing> with files not deletable 1`] = `
<div>
  <div
    className="component file-listing-row--container"
    key="0"
  >
    <div
      className="detail-component"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-4 file-listing-icon--container"
        >
          <input
            checked={false}
            name="exam.xlsx"
            onClick={[MockFunction]}
            type="checkbox"
          />
          <i
            className="fa fa-file-excel-o file-listing-icon"
          />
        </div>
        <div
          className="col-xs-3 file-listing-info"
        >
          <strong>
            <a
              href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
              title="exam.xlsx"
            >
              <div
                className="file-listing-filename"
              >
                exam.xlsx
              </div>
            </a>
          </strong>
          <br />
          <span
            className="file-listing-info-light"
          >
            <span
              className="test-loc-file-created-by"
            >
              Vader
            </span>
            <span
              className="test-loc-file-created"
            >
              2019-11-08 12:26:30.064
            </span>
          </span>
        </div>
        <div
          className="col-xs-5"
        >
          i'm an excel file
        </div>
        <span
          className="pull-right"
        />
      </div>
    </div>
  </div>
  <div
    className="component file-listing-row--container"
    key="1"
  >
    <div
      className="detail-component"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-4 file-listing-icon--container"
        >
          <input
            checked={false}
            name="xray.gif"
            onClick={[MockFunction]}
            type="checkbox"
          />
          <i
            className="fa fa-file-image-o file-listing-icon"
          />
        </div>
        <div
          className="col-xs-3 file-listing-info"
        >
          <strong>
            <a
              href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
              title="xray.gif"
            >
              <div
                className="file-listing-filename"
              >
                xray.gif
              </div>
            </a>
          </strong>
          <br />
          <span
            className="file-listing-info-light"
          >
            <span
              className="test-loc-file-created-by"
            >
              Skywalker
            </span>
            <span
              className="test-loc-file-created"
            >
              2019-11-14 15:47:51.931
            </span>
          </span>
        </div>
        <div
          className="col-xs-5"
        >
          i'm gif
        </div>
        <span
          className="pull-right"
        />
      </div>
    </div>
  </div>
  <div
    className="component file-listing-row--container"
    key="2"
  >
    <div
      className="detail-component"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-4 file-listing-icon--container"
        >
          <input
            checked={false}
            name="report.json"
            onClick={[MockFunction]}
            type="checkbox"
          />
          <i
            className="fa fa-file-o file-listing-icon"
          />
        </div>
        <div
          className="col-xs-3 file-listing-info"
        >
          <strong>
            <a
              href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
              title="report.json"
            >
              <div
                className="file-listing-filename"
              >
                report.json
              </div>
            </a>
          </strong>
          <br />
          <span
            className="file-listing-info-light"
          >
            <span
              className="test-loc-file-created-by"
            >
              Vader
            </span>
            <span
              className="test-loc-file-created"
            >
              2019-11-14 15:48:11.472
            </span>
          </span>
        </div>
        <div
          className="col-xs-5"
        >
          i'm a json file
        </div>
        <span
          className="pull-right"
        />
      </div>
    </div>
  </div>
</div>
`;
